css/default.css
/* ... */
section > :first-child a:hover::after,
section > :first-child a:active::after,
section > :first-child a:focus::after,
section.highlighted > :first-child a::after,
section:target > :first-child a::after {
    visibility: visible;
}
section > :first-child a:hover::after,
section > :first-child a:active::after,
section > :first-child a:focus::after,
section.highlighted > :first-child a::after {
    opacity: 0.8;
}
section:target > :first-child a::after {
    opacity: 0.5;
}

/*********************/
/* TABLE OF CONTENTS */
/*********************/

.TOC a:hover,
.markdownBody .TOC a:hover {
    background-color: var(--GW-TOC-link-hover-background-color);
    color: var(--GW-TOC-link-hover-color);
}
.TOC a:hover::after,
.markdownBody .TOC a:hover::after {
    content: "";
    display: inline-block;
    position: absolute;
    left: 100%;
    top: 0;
    background-color: var(--GW-TOC-link-hover-indicator-bar-color);
    width: 0.25em;
    height: 100%;
}

.markdownBody .TOC.columns > ul {
    margin-bottom: 0;
}

/*	TOC collapsing.
 */

#TOC.collapsed {
	position: absolute;
	width: 1.5rem;
	height: 1.5rem;
	box-sizing: border-box;
    margin: 0;
	border: none;
	background-color: transparent;
    background-image: none;
	top: 340px;
	left: 10px;
}
@media all and (max-width: 900px) {
    #TOC.collapsed {
        position: relative;
        top: unset;
        left: unset;
        width: 1.75rem;
        height: 1.75rem;
        margin: -0.5em auto 1.25em auto;
    }
    body[class*='-index'] #TOC.collapsed {
    	margin: 0 auto -1em auto;
    }
}

#TOC.collapsed > ul {
	display: none;
}

#TOC .toc-collapse-toggle-button {
	appearance: none;
    border: none;
    background-color: transparent;
    background-image: url('/static/img/icon/eye-slash.svg');
    background-origin: content-box;
    background-repeat: no-repeat;
    border: 1px dotted currentColor;
    color: inherit;
    font-family: var(--GW-sans-serif-font-stack);
    font-weight: inherit;
    font-style: inherit;
    font-size: inherit;
    padding: 0;
    position: absolute;
    width: 2em;
    height: 1.75em;
    padding: 3px 2px 2px 2px;
    top: -1px;
    right: -1px;
    z-index: 1;
    opacity: 0.65;
    cursor: pointer;
}
#TOC .toc-collapse-toggle-button:hover {
    opacity: 1.0;
}
#TOC.collapsed .toc-collapse-toggle-button {
    background-image: url('/static/img/icon/list-tree.svg');
    width: 100%;
    height: 100%;
}

@media all and (max-width: 649px) {
    #TOC:not(.collapsed) {
        margin-top: 3rem;
    }
    #TOC:not(.collapsed) .toc-collapse-toggle-button {
        top: -1.75em;
        right: unset;
        left: -1px;
        border: inherit;
        background-color: inherit;
        margin: auto;
        width: 2.125em;
        height: 1.75em;
        padding: 3px;
        box-sizing: border-box;
        opacity: 1.0;
    }
}


/**********/
/* FOOTER */
/**********/

#footer {
    text-align: center;
    margin: 3em 0 0 0;
}
@media all and (max-width: 649px) {
    #footer {
        margin: 3em 0 2em 0;
    }
}

#footer p {
    margin: 1em 0;
}

/*********************/
/* SECTION SEPARATOR */
/*********************/

hr {
    border: 0;
    margin: 1.125em 0;
    height: 40px;
    line-height: 1;
    display: flex;
}

[class^='horizontal-rule'] {
    clear: both;
}

/* These classes are created at compile-time by the 'rulersCycle' Pandoc rewrite pass in Typography.hs; they assign each use of <hr> in the body a class 0-2 (n modulo 3). This lets us create an astronomical theme cycle: the first, fourth, seventh etc rulers are the triple-white star; the second, fifth, eighth etc are a dotted moon; the third, sixth, ninth etc are a sun. */
hr::after {
    margin: auto;
}
hr::after,
.horizontal-rule-nth-0 hr::after {
    /* https://commons.wikimedia.org/wiki/File:Sun_of_Vergina_black.svg */
    content: url('/static/img/icon/sun-verginasun-black.svg');
    opacity: 0.87;
    width: 40px;
    height: 40px;
}
.horizontal-rule-nth-1 hr::after {
    /* https://commons.wikimedia.org/wiki/File:Japanese_crest_Tsuki_ni_Hoshi.svg */
    /* NOTE: alternative moon icon is /static/img/icon/japanesecrest-oookashippouofoookatadasuke-sun.svg modified from https://commons.wikimedia.org/wiki/File:Japanese_crest_Oooka_Shippou_of_Oooka_Tadasuke.svg - while nice, it lacks the intense moire effect of the Vergina Sun */
    content: url('/static/img/icon/japanesecrest-tsukinihoshi-dottedmoon.svg');
    opacity: 0.90;
    width: 25px;
    height: 25px;
}
.horizontal-rule-nth-2 hr::after {
    content: url('/static/img/icon/asterism-triplewhitestar.svg');
    width: 36px;
    height: 30px;
}
.horizontal-rule-nth-2 {
    filter: drop-shadow(0 0 0 currentColor);
}


/*******************************************/
/* DIRECTORY INDEXES & LINK BIBLIOGRAPHIES */
/*******************************************/

/*  Italicize link tags in popups/indexes similar to the page metadata block’s
    tags, for consistency.
 */
.link-tags {
    font-style: italic;
    margin-left: 0.1em; /* tags are enclosed in ()s, but as links with the text-shadow trick, the italic slant leads to the usual 'chomp' without additional margin. */
}

blockquote .TOC {
    margin: 1.25em 0 0 0;
    padding: 0.5em 0.5em 0.75em 0.75em;

    /*  The following three properties are to prevent both overlap and
        margin-collapse of the TOC when there’s a floated thumbnail figure
        that juts down below the abstract text.
     */
    clear: both;
    display: inline-block;
    width: calc(100% - 1.25em);    /* Subtract side padding. */
}
/* ... */

